# distributed-ffmpeg-nvr

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
ci-cd/: Dockerfile  base.Dockerfile  docker-compose.yml  docker-entrypoint.sh  env2yaml.sh
ci-cd/helm/: values.yaml
ci-cd/helm/templates/: deployment.yaml  secret.yaml
ci-cd/local/: docker-compose.yml  local.Dockerfile
src/: main.py  settings.py
src/amqp/: __init__.py  consume.py  handle.py
src/core/ffmpeg/: exceptions.py  ffmpeg.py
src/core/ffmpeg/tests/: test_ffmpeg.py
src/streams/: recordings.py  repo.py  utils.py
src/streams/tests/: test_asyncio.py
